--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-### Example user template
-
-# IntelliJ project files
-/.idea/
+.DS_Store
+.idea
 *.iml
-out
-gen
+/.idea/
